--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Map/MainMenuMap.MainMenuMap
 EditorStartupMap=/Game/Map/Main.Main
 
 [/Script/Engine.RendererSettings]
